--- a/pricing.html
+++ b/pricing.html
@@ -28,9 +28,7 @@
     <section class="jumbotron">
       <div class="jumbotron__img jumbotron__img--pricing"></div>
       <h1 class="jumbotron__header">PRICING</h1>
-      <p class="jumbotron__subheader">
-        hello there!! Hi i am here.hello there!! Hi i am here.hello there!! Hi i am here.
-        hello there!! Hi i am here. hiiiiii
+      <p class="jumbotron__subheader">Coming soon
       </p>
     </section>
     <section class="pricing_details">
