--- a/error.html
+++ b/error.html
@@ -30,7 +30,7 @@
         <p class="jumbotron__subheader jumbotron__subheader--error">
           Sorry, the page you are looking for cannot be found.
         </p>
-        <button class="">
+        <button class="jumbotron__free-signup jumbotron__home">
           Home page
         </button>
       </div>
