--- a/aboutus.html
+++ b/aboutus.html
@@ -5,8 +5,9 @@
     <title>About us</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <script src="js/jquery-1.9.1.js"></script>
-    <script src="js/jquery.collapse.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/carousel.js"></script>
   </head>
   <body>
     <header class="header">
@@ -163,7 +164,17 @@
     
     <!-- Carousal box -->
     <section class="carousel">
-      
+      <div id='left_scroll'><i class="fa fa-angle-left"></i></div>
+        <div class='carousel_inner'>
+            <ul id='carousel_ul'>
+                <li><div class="caoursel__content"><i class="fa fa-twitter"></i><br><p>Check out Times of India featuring Murdia AIR 1 JEE &amp;<br>embibe test analytics to boost scores.</p>@embibe - Jan 21</div></li>
+                <li><div class="caoursel__content"><i class="fa fa-twitter"></i><br><p>Check out Times of India featuring Murdia AIR 1 JEE &amp;<br>embibe test analytics to boost scores.</p>@embibe - Jan 21</div></li>
+                <li><div class="caoursel__content"><i class="fa fa-twitter"></i><br><p>Check out Times of India featuring Murdia AIR 1 JEE &amp;<br>embibe test analytics to boost scores.</p>@embibe - Jan 21</div></li>
+                <li><div class="caoursel__content"><i class="fa fa-twitter"></i><br><p>Check out Times of India featuring Murdia AIR 1 JEE &amp;<br>embibe test analytics to boost scores.</p>@embibe - Jan 21</div></li>
+                <li><div class="caoursel__content"><i class="fa fa-twitter"></i><br><p>Check out Times of India featuring Murdia AIR 1 JEE &amp;<br>embibe test analytics to boost scores.</p>@embibe - Jan 21</div></li>
+            </ul>
+        </div>
+      <div id='right_scroll'><i class="fa fa-angle-right"></i></div>
     </section>
 
     <!-- Our Investors -->
