Change logo as image

--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -12,7 +12,9 @@
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
-          <strong><i>embibe</a></i></strong>
+          <a href="index.html" class="navbar__menu--logo">
+          <img src="img/logo-white.svg" height="30px">
+        </a>
         </a>
         <nav class="header__nav">
           <a href="pricing.html" class="navbar__menu--link">Pricing</a>
