--- a/faculty.html
+++ b/faculty.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
-          <strong><i>embibe</a></i></strong>
+          <img src="img/logo-white.svg" height="30px">
         </a>
         <nav class="header__nav">
           <a href="pricing.html" class="navbar__menu--link">Pricing</a>
