Change home page

--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/carousel.js"></script>
   </head>
   <body>
+    <section class="jumbotron jumbotron__img-aboutus">
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
@@ -24,15 +25,10 @@
         </nav>
       </div>
     </header>
-    
-    <section class="jumbotron">
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--aboutus"></div>
-        <h1 class="jumbotron__header">FACULTY</h1>
+        <h1 class="jumbotron__header">ABOUT US</h1>
         <p class="jumbotron__subheader">
-          In an inlikely warehouse in Byculla,Mumbai, a group of indiaviduals<br>
-          started a crusade to individualise education - using the power of<br>
-          information.
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
         </p>
       </div>
     </section>
