--- a/error.html
+++ b/error.html
@@ -9,6 +9,7 @@
     <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
+    <section class="jumbotron jumbotron__img-error">
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
@@ -23,16 +24,11 @@
         </nav>
       </div>
     </header>
-    
-    <section class="jumbotron">
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--error"></div>
-        <p class="jumbotron__subheader jumbotron__subheader--error">
-          Sorry, the page you are looking for cannot be found.
+        <p class="jumbotron__subheader">
+          The page you are looking for is not here.
         </p>
-        <button class="jumbotron__free-signup jumbotron__home">
-          Home page
-        </button>
+        <button class="jumbotron__free-signup jumbotron__home">Home Page</button>
       </div>
     </section>
 
