--- a/stories.html
+++ b/stories.html
@@ -9,6 +9,7 @@
     <script src="js/home.js"></script>
   </head>
   <body>
+  <section class="jumbotron jumbotron__img-stories">
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
@@ -23,10 +24,7 @@
         </nav>
       </div>
     </header>
-
-    <section class="jumbotron">
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--IIT_JEE"></div>
         <h1 class="jumbotron__header">SUCCESS STORIES</h1>
         <p class="jumbotron__subheader">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
@@ -90,8 +88,7 @@
       </div>
     </section>
     <!-- Quote -->
-    <section class="quote">
-      <img src="img/stories.png" class="quote__quote-image">
+    <section class="quote quote--stories">
       <h2 class="quote__quote">
         I'm seeing myself improve in different ways that I didn't know I could.
       </h2>
