--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -9,27 +9,23 @@
     <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
-    <header class="header">
-      <div class="header__container">
-        <a href="index.html" class="navbar__menu--logo">
+    <section class="jumbotron jumbotron__img-IIT_JEE">
+      <header class="header">
+        <div class="header__container">
           <a href="index.html" class="navbar__menu--logo">
-          <img src="img/logo-white.svg" height="30px">
-        </a>
-        </a>
-        <nav class="header__nav">
-          <a href="pricing.html" class="navbar__menu--link">Pricing</a>
-          <a href="parents.html" class="navbar__menu--link">Parents</a>
-          <a href="faculty.html" class="navbar__menu--link">Faculty</a>
-          <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-          <button class="navbar__signin">Sign in</button>
-        </nav>
-      </div>
-    </header>
-    
-    <section class="jumbotron">
+            <img src="img/logo-white.svg" height="30px">
+          </a>
+          <nav class="header__nav">
+            <a href="pricing.html" class="navbar__menu--link">Pricing</a>
+            <a href="parents.html" class="navbar__menu--link">Parents</a>
+            <a href="faculty.html" class="navbar__menu--link">Faculty</a>
+            <a href="stories.html" class="navbar__menu--link">Success Stories</a>
+            <button class="navbar__signin">Sign in</button>
+          </nav>
+        </div>
+      </header>
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--IIT_JEE"></div>
-        <h1 class="jumbotron__header">IIT JEE</h1>
+        <h1 class="jumbotron__header">SUCCESS STORIES</h1>
         <p class="jumbotron__subheader">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
         </p>
@@ -197,9 +193,7 @@
     </section>
 
     <!-- Image of IIT-JEE Student -->
-    <section class="quote">
-      <img src="img/jee_student.png" class="quote__quote-image">
-      
+    <section class="quote quote--IIT_JEE">
       <h2 class="quote__quote">
         I'm seeing myself improve in different ways that I didn't know I could.
       </h2>
