--- a/parents.html
+++ b/parents.html
@@ -9,25 +9,23 @@
     <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
-    <header class="header">
-      <div class="header__container">
-        <a href="index.html" class="navbar__menu--logo">
-          <img src="img/logo-white.svg" height="30px">
-        </a>
-        <nav class="header__nav">
-          <a href="pricing.html" class="navbar__menu--link">Pricing</a>
-          <a href="parents.html" class="navbar__menu--link">Parents</a>
-          <a href="faculty.html" class="navbar__menu--link">Faculty</a>
-          <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-          <button class="navbar__signin">Sign in</button>
-        </nav>
-      </div>
-    </header>
-    
-    <section class="jumbotron">
+    <section class="jumbotron jumbotron__img-parents">
+      <header class="header">
+        <div class="header__container">
+          <a href="index.html" class="navbar__menu--logo">
+            <img src="img/logo-white.svg" height="30px">
+          </a>
+          <nav class="header__nav">
+            <a href="pricing.html" class="navbar__menu--link">Pricing</a>
+            <a href="parents.html" class="navbar__menu--link">Parents</a>
+            <a href="faculty.html" class="navbar__menu--link">Faculty</a>
+            <a href="stories.html" class="navbar__menu--link">Success Stories</a>
+            <button class="navbar__signin">Sign in</button>
+          </nav>
+        </div>
+      </header>
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--parents"></div>
-        <h1 class="jumbotron__header">FACULTY</h1>
+        <h1 class="jumbotron__header">PARENTS</h1>
         <p class="jumbotron__subheader">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
         </p>
@@ -99,7 +97,7 @@
     </section>
     <!-- Video -->
     <section class="video">
-      <img src="img/video.png" width="1400px" height="700px">
+      <img src="img/video.png">
     </section>
 
     <!-- FAQs section -->
