--- a/tos.html
+++ b/tos.html
@@ -9,28 +9,27 @@
     <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
-    <header class="header">
-      <div class="header__container">
-        <a href="index.html" class="navbar__menu--logo">
-          <img src="img/logo-white.svg" height="30px">
-        </a>
-        <nav class="header__nav">
-          <a href="pricing.html" class="navbar__menu--link">Pricing</a>
-          <a href="parents.html" class="navbar__menu--link">Parents</a>
-          <a href="faculty.html" class="navbar__menu--link">Faculty</a>
-          <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-          <button class="navbar__signin">Sign in</button>
-        </nav>
-      </div>
-    </header>
-    
-    <section class="jumbotron">
+    <section class="jumbotron jumbotron__img-tos">
+      <header class="header">
+        <div class="header__container">
+          <a href="index.html" class="navbar__menu--logo">
+            <img src="img/logo-white.svg" height="30px">
+          </a>
+          <nav class="header__nav">
+            <a href="pricing.html" class="navbar__menu--link">Pricing</a>
+            <a href="parents.html" class="navbar__menu--link">Parents</a>
+            <a href="faculty.html" class="navbar__menu--link">Faculty</a>
+            <a href="stories.html" class="navbar__menu--link">Success Stories</a>
+            <button class="navbar__signin">Sign in</button>
+          </nav>
+        </div>
+      </header>
       <div class="jumbotron__container">
-        <div class="jumbotron__img jumbotron__img--tos"></div>
-        <h1 class="jumbotron__header jumbotron__header--tos">TERMS OF SERVICE</h1>
-        <p class="jumbotron__subheader jumbotron__subheader--tos">
-          www.embibe.com s a website oparated by indiavidual Learning Private Limited (here in after reffered to as "We","Us").We are a company registreted in the state of Haryana and have our office located at Mumbai.
+        <h1 class="jumbotron__header">SUCCESS STORIES</h1>
+        <p class="jumbotron__subheader">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
         </p>
+        <button class="jumbotron__free-signup">Sign Up for Free</button>
       </div>
     </section>
 
