--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <script src="js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
     <script src="js/home.js"></script>
-    <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
     <section class="jumbotron jumbotron__img-home">
@@ -282,15 +282,35 @@
          </ul>
      </div>
     </footer>
-    <script>
-        new jQueryCollapse($("#custom-show-hide-example"), {
-          open: function() {
-            this.slideDown(150);
-          },
-          close: function() {
-            this.slideUp(150);
-          }
+    <script type="text/javascript">
+      $("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+
+      $(function(){
+        // Calling Login Form
+        $("#login_form").click(function(){
+          $(".social_login").hide();
+          $(".user_login").show();
+          return false;
         });
+
+        // Calling Register Form
+        $("#register_form").click(function(){
+          $(".social_login").hide();
+          $(".user_register").show();
+          $(".header_title").text('Register');
+          return false;
+        });
+
+        // Going back to Social Forms
+        $(".back_btn").click(function(){
+          $(".user_login").hide();
+          $(".user_register").hide();
+          $(".social_login").show();
+          $(".header_title").text('Login');
+          return false;
+        });
+
+      })
     </script>
   </body>
 </html>
