--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -35,55 +35,51 @@
       </div>
     </section>
     <!-- Sign up button model -->
-    <div class="popup__container">
-      <div id="modal" class="popupContainer" style="display:none;">
-        <section class="popupBody">
+      <div id="modal" class="popup" style="display:none;">
+        <section class="popup__body">
           <h2 class="popup__header">REGISTER FOR FREE</h2>
-          <div class="popup-fb">
-            <div class="popup-fb__fb-logo">
+          <div class="popup__fb">
+            <div class="popup__fb-fb-logo">
               <img src="img/facebook.png">
             </div>
-            <div class="popup-fb__fb-login">
+            <div class="popup__fb-fb-login">
               <button class="fb-login">Sign up with Facebook</button>
             </div>
           </div>
-          <div class="horizontal-line">
-            <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
-              <sapn style="display:inline-block;">or</sapn>
-            <hr width="43%" style="display:inline-block;vertical-align:middle;padding-right:20px;">
-          </div>
-          <form class="form">
-            <div class="form_part">
-              <div class="form-part__image">
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
+            <sapn style="display:inline-block;">or</sapn>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-right:20px;">
+          <form class="popup__form">
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
                 <img src="img/email_logo.png">
               </div>
-              <div class="form-part__input">
+              <div class="popup__form-part-input">
                 <input type = "text" placeholder="Email Address" class="signup_input">
               </div>
             </div>
             <div class="form_part">
-              <div class="form-part__image">
+              <div class="popup__form-part-image">
                 <img src="img/phone_logo.png">
               </div>
-              <div class="form-part__input">
+              <div class="popup__form-part-input">
                 <input type = "text" placeholder="Mobile Number" class="signup_input">
               </div>
             </div>
-            <div class="form_part">
-              <div class="form-part__image">
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
                 <img src="img/password_logo.png">  
               </div>
-              <div class="form-part__input">
+              <div class="popup__form-part-input">
                 <input type = "password" placeholder="Password" class="signup_input">
               </div>
             </div>
-            <p class="t_p"><span class="agree">Click Sign Up to agree to our</span> Terms and Conditions <span class="agree">and</span> Privacy Policy</p>
+            <p class="popup__t_p"><span class="agree">Click Sign Up to agree to our</span> Terms and Conditions <span class="agree">and</span> Privacy Policy</p>
             <button class="fb-login popup--signup">Sign Up</button>
           </form>
-          <p class="already-member">Already a member? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign in</span></a></p>
+          <p class="popup__already-member">Already a member? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign in</span></a></p>
         </section>
       </div>
-    </div>
     <!-- End to model box -->
 
     <section class="feature">
