Create pricing tables

--- a/stories.html
+++ b/stories.html
@@ -27,9 +27,12 @@
       <div class="jumbotron__container">
         <h1 class="jumbotron__header">SUCCESS STORIES</h1>
         <p class="jumbotron__subheader">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
+          Embibe has helped students at all levels of exam preparation realise their dream of getting into IITs,BITSATs,AIIMS,AIPMTs,and other topranked Indian institutes.
+          <br>
+          <br>
+          What will you achive?
         </p>
-        <button class="jumbotron__free-signup">Sign Up for Free</button>
+        <button class="jumbotron__free-signup" style="margin-top:70px;">Sign Up for Free</button>
       </div>
     </section>
     <section class="successful-student">
@@ -89,9 +92,9 @@
     </section>
     <!-- Quote -->
     <section class="quote quote--stories">
-      <h2 class="quote__quote">
-        I'm seeing myself improve in different ways that I didn't know I could.
-      </h2>
+      <p class="quote__quote">
+        I'm seeing myself improve in different<br>ways that I didn't know I could.
+      </p>
       <p class="quote__name">
         Shubham Prasad,Mp<br>
         239 JEE Main Score
@@ -101,7 +104,8 @@
     <!-- Rankers -->
     <section class="rankers">
       <div class="rankers__container">
-        
+        <h1 class="rankers__header">OUR RANKERS</h1>
+        <h4 class="rankers__subheader">Our rankers have stories to tell and tips to share.<br>What would you story be?</h4>
       </div>
     </section>
 
@@ -194,8 +198,8 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__list"><span style="color: #696969">Copyright &copy; 2014 The Indiavidual</sapn></li>
-          <li class="footer__list" id="terms"><a href="terms.html" class="footer__link">Terms of Services</a></li>
+          <li class="footer__list"><span style="color: #696969;font-size:12px;">Copyright &copy; 2014 The Indiavidual</sapn></li>
+          <li class="footer__list" id="terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
           <li class="footer__list"><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
          </ul>
      </div>
