--- a/parents.html
+++ b/parents.html
@@ -40,8 +40,7 @@
         </div>
         <div class="feature__subheader">
           <p>
-            hello there!! Hi i am here.hello there!! Hi i am here.hello there!! Hi i am here.
-            hello there!! Hi i am here.
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
           </p>
         </div>
 
@@ -97,7 +96,7 @@
     </section>
     <!-- Video -->
     <section class="video">
-      <img src="img/video.png">
+      
     </section>
 
     <!-- FAQs section -->
@@ -230,8 +229,8 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__list"><span style="color: #696969">Copyright &copy; 2014 The Indiavidual</sapn></li>
-          <li class="footer__list" id="terms"><a href="terms.html" class="footer__link">Terms of Services</a></li>
+          <li class="footer__list"><span style="color: #696969;font-size:12px;">Copyright &copy; 2014 The Indiavidual</sapn></li>
+          <li class="footer__list" id="terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
           <li class="footer__list"><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
          </ul>
      </div>
