--- a/tos.html
+++ b/tos.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Faculty</title>
+    <title>Terms and Services</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <script src="js/jquery-1.9.1.js"></script>
@@ -25,14 +25,20 @@
         </div>
       </header>
       <div class="jumbotron__container">
-        <h1 class="jumbotron__header">SUCCESS STORIES</h1>
-        <p class="jumbotron__subheader">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
+        <h1 class="jumbotron__header jumbotron__header--tos">TERMS OF SERVICE</h1>
+        <p class="jumbotron__subheader jumbotron__subheader--tos">
+          www.embibe.com is a website operated by Indiavidual Learning Private Limited (hereinafter referred to as "We", "Us"). We are a company registered in the State of Haryana and have our office located at Mumbai.
         </p>
-        <button class="jumbotron__free-signup">Sign Up for Free</button>
       </div>
     </section>
-
+    <section class="info-tos">
+      <div class="info-tos__container">
+        <h3 class="info-tos__header">1.&nbsp;&nbsp;&nbsp;&nbsp; TERMS OF WEBSITE USE</h3>
+        <p>
+          1.1&nbsp;&nbsp;&nbsp;This page (together with the documents referred on it) set out the terms of use by which you may make use of the embibe.com website and the Embibe mobile application (together and separately, referred to as "our site"), whether as a guest or a registered user. Please read these terms of use carefully before you start to use the site. By using our site or by assessing or using our website through our Facebook application, you indicate that you have read and accepted these terms of use, which include the privacy policy that applies to our site (the "Privacy Policy") and that you agree to abide by them. If you do not agree to these terms of use, please refrain from using our site. We at our sole discretion, reserve the right not to accept a user from registering on our site or on our Facebook application without assigning any reason thereof.
+        </p>
+      </div>
+    </section>
     
     <section class="android-app">
       <div class="android-app__container">
@@ -122,8 +128,8 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__list"><span style="color: #696969">Copyright &copy; 2014 The Indiavidual</sapn></li>
-          <li class="footer__list" id="terms"><a href="terms.html" class="footer__link">Terms of Services</a></li>
+          <li class="footer__list"><span style="color: #696969;font-size:12px;">Copyright &copy; 2014 The Indiavidual</sapn></li>
+          <li class="footer__list" id="terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
           <li class="footer__list"><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
          </ul>
      </div>
