--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -5,11 +5,6 @@
     <title>IIT_JEE</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <script src="js/jquery-1.9.1.js"></script>
-    <script src="js/jquery.collapse.js"></script>
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
-    <script type="text/javascript" src="js/home.js"></script>
   </head>
   <body>
     <section class="jumbotron jumbotron__img-IIT_JEE">
@@ -23,7 +18,7 @@
             <a href="parents.html" class="navbar__menu--link">Parents</a>
             <a href="faculty.html" class="navbar__menu--link">Faculty</a>
             <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-            <button class="navbar__signin">Sign in</button>
+            <button id ="modal_trigger1" href="#modal1" class="navbar__signin">Sign in</button>
           </nav>
         </div>
       </header>
@@ -32,11 +27,11 @@
         <p class="jumbotron__subheader">
           We help you prepare for the coutry's most competitive examination via our intelligent recommendations and time management analysis.
         </p>
-        <button id ="modal_trigger" href ="#modal" class="jumbotron__free-signup">Sign Up for Free</button>
+        <button id ="modal_trigger2" href ="#modal2" class="jumbotron__free-signup">Sign Up for Free</button>
       </div>
     </section>
     <!-- Sign up button model -->
-      <div id="modal" class="popup" style="display:none;">
+      <div id="modal1" class="popup" style="display:none;">
         <section class="popup__body">
           <h2 class="popup__header">REGISTER FOR FREE</h2>
           <div class="popup__fb">
@@ -569,6 +564,8 @@
          </ul>
      </div>
     </footer>
+    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/jquery.collapse.js"></script>
     <script>
         new jQueryCollapse($("#custom-show-hide-example"), {
           open: function() {
@@ -579,35 +576,12 @@
           }
         });
     </script>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
     <script type="text/javascript">
-      $("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
-
-      $(function(){
-        // Calling Login Form
-        $("#login_form").click(function(){
-          $(".social_login").hide();
-          $(".user_login").show();
-          return false;
-        });
-
-        // Calling Register Form
-        $("#register_form").click(function(){
-          $(".social_login").hide();
-          $(".user_register").show();
-          $(".header_title").text('Register');
-          return false;
-        });
-
-        // Going back to Social Forms
-        $(".back_btn").click(function(){
-          $(".user_login").hide();
-          $(".user_register").hide();
-          $(".social_login").show();
-          $(".header_title").text('Login');
-          return false;
-        });
-
-      })
+      $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close1" });
+      $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close2" });
     </script>
   </body>
 </html>
