Add login form in all pages

--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -30,8 +30,48 @@
         <button id ="modal_trigger2" href ="#modal2" class="jumbotron__free-signup">Sign Up for Free</button>
       </div>
     </section>
-    <!-- Sign up button model -->
+    <!-- Sign in button model -->
       <div id="modal1" class="popup" style="display:none;">
+        <section class="popup__body">
+          <h2 class="popup__header">Login to Embibe</h2>
+          <div class="popup__fb">
+            <div class="popup__fb-fb-logo">
+              <img src="img/facebook.png">
+            </div>
+            <div class="popup__fb-fb-login">
+              <button class="fb-login">Login with Facebook</button>
+            </div>
+          </div>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
+            <sapn style="display:inline-block;">or</sapn>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-right:20px;">
+          <form class="popup__form">
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/email_logo.png">
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "text" placeholder="Email Address" class="signup_input">
+              </div>
+            </div>
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/password_logo.png">  
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "password" placeholder="Password" class="signup_input">
+              </div>
+            </div>
+            <p class="popup__forgetpwd">Forget Password?</p>
+            <button class="fb-login popup--signup">Sign In</button>
+          </form>
+          <p class="popup__already-member">Not a member yet? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign Up for free</span></a></p>
+        </section>
+      </div>
+    <!-- End to model box -->
+
+    <!-- Sign up button model -->
+      <div id="modal2" class="popup" style="display:none;">
         <section class="popup__body">
           <h2 class="popup__header">REGISTER FOR FREE</h2>
           <div class="popup__fb">
