--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
             <a href="parents.html" class="navbar__menu--link">Parents</a>
             <a href="faculty.html" class="navbar__menu--link">Faculty</a>
             <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-            <button class="navbar__signin">Sign in</button>
+            <button id ="modal_trigger" href="#modal" class="navbar__signin">Sign in</button>
           </nav>
         </div>
       </header>
@@ -32,6 +32,46 @@
       </div>
     </section>
 
+    <!-- Sign up button model -->
+      <div id="modal" class="popup" style="display:none;">
+        <section class="popup__body">
+          <h2 class="popup__header">Login to Embibe</h2>
+          <div class="popup__fb">
+            <div class="popup__fb-fb-logo">
+              <img src="img/facebook.png">
+            </div>
+            <div class="popup__fb-fb-login">
+              <button class="fb-login">Login with Facebook</button>
+            </div>
+          </div>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
+            <sapn style="display:inline-block;">or</sapn>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-right:20px;">
+          <form class="popup__form">
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/email_logo.png">
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "text" placeholder="Email Address" class="signup_input">
+              </div>
+            </div>
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/password_logo.png">  
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "password" placeholder="Password" class="signup_input">
+              </div>
+            </div>
+            <p class="popup__forgetpwd">Forget Password?</p>
+            <button class="fb-login popup--signup">Sign In</button>
+          </form>
+          <p class="popup__already-member">Not a member yet? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign Up for free</span></a></p>
+        </section>
+      </div>
+    <!-- End to model box -->
+    
     <!-- FAQs section -->
     <section class="faq">
       <div class="faq__container">
@@ -396,5 +436,9 @@
          </ul>
      </div>
     </footer>
+    <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+    <script type="text/javascript">
+      $("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+    </script>
   </body>
 </html>
