--- a/parents.html
+++ b/parents.html
@@ -18,7 +18,7 @@
             <a href="parents.html" class="navbar__menu--link">Parents</a>
             <a href="faculty.html" class="navbar__menu--link">Faculty</a>
             <a href="stories.html" class="navbar__menu--link">Success Stories</a>
-            <button id ="modal_trigger" href="#modal" class="navbar__signin">Sign in</button>
+            <button id ="modal_trigger1" href="#modal1" class="navbar__signin">Sign in</button>
           </nav>
         </div>
       </header>
@@ -27,11 +27,11 @@
         <p class="jumbotron__subheader">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
         </p>
-        <button id ="modal_trigger" href ="#modal" class="jumbotron__free-signup">Sign Up for Free</button>
+        <button id ="modal_trigger2" href ="#modal2" class="jumbotron__free-signup">Sign Up for Free</button>
       </div>
     </section>
     <!-- Sign in button model -->
-      <div id="modal" class="popup" style="display:none;">
+      <div id="modal1" class="popup" style="display:none;">
         <section class="popup__body">
           <h2 class="popup__header">Login to Embibe</h2>
           <div class="popup__fb">
@@ -66,6 +66,54 @@
             <button class="fb-login popup--signup">Sign In</button>
           </form>
           <p class="popup__already-member">Not a member yet? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign Up for free</span></a></p>
+        </section>
+      </div>
+    <!-- End to model box -->
+
+    <!-- Sign up button model -->
+      <div id="modal2" class="popup" style="display:none;">
+        <section class="popup__body">
+          <h2 class="popup__header">REGISTER FOR FREE</h2>
+          <div class="popup__fb">
+            <div class="popup__fb-fb-logo">
+              <img src="img/facebook.png">
+            </div>
+            <div class="popup__fb-fb-login">
+              <button class="fb-login">Sign up with Facebook</button>
+            </div>
+          </div>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
+            <sapn style="display:inline-block;">or</sapn>
+          <hr width="43%" style="display:inline-block;vertical-align:middle;padding-right:20px;">
+          <form class="popup__form">
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/email_logo.png">
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "text" placeholder="Email Address" class="signup_input">
+              </div>
+            </div>
+            <div class="form_part">
+              <div class="popup__form-part-image">
+                <img src="img/phone_logo.png">
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "text" placeholder="Mobile Number" class="signup_input">
+              </div>
+            </div>
+            <div class="popup__form_part">
+              <div class="popup__form-part-image">
+                <img src="img/password_logo.png">  
+              </div>
+              <div class="popup__form-part-input">
+                <input type = "password" placeholder="Password" class="signup_input">
+              </div>
+            </div>
+            <p class="popup__t_p"><span class="agree">Click Sign Up to agree to our</span> Terms and Conditions <span class="agree">and</span> Privacy Policy</p>
+            <button class="fb-login popup--signup">Sign Up</button>
+          </form>
+          <p class="popup__already-member">Already a member? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign in</span></a></p>
         </section>
       </div>
     <!-- End to model box -->
@@ -273,6 +321,8 @@
          </ul>
      </div>
     </footer>
+    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/jquery.collapse.js"></script>
     <script>
         new jQueryCollapse($("#custom-show-hide-example"), {
           open: function() {
@@ -283,11 +333,10 @@
           }
         });
     </script>
-    <script src="js/jquery-1.9.1.js"></script>
-    <script src="js/jquery.collapse.js"></script>
     <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
     <script type="text/javascript">
-      $("#modal_trigger").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+      $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close1" });
+      $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close2" });
     </script>
   </body>
 </html>
