--- a/IIT_JEE.html
+++ b/IIT_JEE.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
   </head>
   <body>
-    <section class="jumbotron jumbotron__img-IIT_JEE">
+    <section class="jumbotron jumbotron__img--IIT_JEE">
       <header class="header">
         <div class="header__container">
           <a href="index.html" class="navbar__menu--logo">
@@ -39,7 +39,7 @@
               <img src="img/facebook.png">
             </div>
             <div class="popup__fb-fb-login">
-              <button class="fb-login">Login with Facebook</button>
+              <button class="popup__fb-login">Login with Facebook</button>
             </div>
           </div>
           <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
@@ -51,7 +51,7 @@
                 <img src="img/email_logo.png">
               </div>
               <div class="popup__form-part-input">
-                <input type = "text" placeholder="Email Address" class="signup_input">
+                <input type = "text" placeholder="Email Address" class="popup__signup_input">
               </div>
             </div>
             <div class="popup__form_part">
@@ -59,11 +59,11 @@
                 <img src="img/password_logo.png">  
               </div>
               <div class="popup__form-part-input">
-                <input type = "password" placeholder="Password" class="signup_input">
+                <input type = "password" placeholder="Password" class="popup__signup_input">
               </div>
             </div>
             <p class="popup__forgetpwd">Forget Password?</p>
-            <button class="fb-login popup--signup">Sign In</button>
+            <button class="popup__fb-login popup--signup">Sign In</button>
           </form>
           <p class="popup__already-member">Not a member yet? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign Up for free</span></a></p>
         </section>
@@ -79,7 +79,7 @@
               <img src="img/facebook.png">
             </div>
             <div class="popup__fb-fb-login">
-              <button class="fb-login">Sign up with Facebook</button>
+              <button class="popup__fb-login">Sign up with Facebook</button>
             </div>
           </div>
           <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
@@ -91,7 +91,7 @@
                 <img src="img/email_logo.png">
               </div>
               <div class="popup__form-part-input">
-                <input type = "text" placeholder="Email Address" class="signup_input">
+                <input type = "text" placeholder="Email Address" class="popup__signup_input">
               </div>
             </div>
             <div class="form_part">
@@ -99,7 +99,7 @@
                 <img src="img/phone_logo.png">
               </div>
               <div class="popup__form-part-input">
-                <input type = "text" placeholder="Mobile Number" class="signup_input">
+                <input type = "text" placeholder="Mobile Number" class="popup__signup_input">
               </div>
             </div>
             <div class="popup__form_part">
@@ -107,11 +107,11 @@
                 <img src="img/password_logo.png">  
               </div>
               <div class="popup__form-part-input">
-                <input type = "password" placeholder="Password" class="signup_input">
+                <input type = "password" placeholder="Password" class="popup__signup_input">
               </div>
             </div>
-            <p class="popup__t_p"><span class="agree">Click Sign Up to agree to our</span> Terms and Conditions <span class="agree">and</span> Privacy Policy</p>
-            <button class="fb-login popup--signup">Sign Up</button>
+            <p class="popup__t_p"><span class="popup__agree">Click Sign Up to agree to our</span> Terms and Conditions <span class="popup__agree">and</span> Privacy Policy</p>
+            <button class="popup__fb-login popup--signup">Sign Up</button>
           </form>
           <p class="popup__already-member">Already a member? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign in</span></a></p>
         </section>
@@ -236,30 +236,30 @@
         </h4>
         <div class="know-jee__sub">
           <div class="know-jee__subject">
-            <h1 class="know-jee__subject--precentage">43%</h1>
+            <h1 class="know-jee__subject-precentage">43%</h1>
             <img src="img/phy.png">
             <h4>Physics</h4>
             <ul>
-              <li class="know-jee__subject--std"><h2 style="color:#B200FF">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
-              <li class="know-jee__subject--std"><h2 style="color:#B200FF">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#B200FF">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#B200FF">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
             </ul>
           </div>
           <div class="know-jee__subject" style="margin-left:-5px;">
-            <h1 class="know-jee__subject--precentage">31%</h1>
+            <h1 class="know-jee__subject-precentage">31%</h1>
             <img src="img/chem.png">
             <h4>Chemistry</h4>
             <ul>
-              <li class="know-jee__subject--std"><h2 style="color:#FF0077">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
-              <li class="know-jee__subject--std"><h2 style="color:#FF0077">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#FF0077">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#FF0077">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
             </ul>
           </div>
           <div class="know-jee__subject" style="margin-left:-5px;">
-            <h1 class="know-jee__subject--precentage">36%</h1>
+            <h1 class="know-jee__subject-precentage">36%</h1>
             <img src="img/maths.png">
             <h4>Mathematics</h4>
             <ul>
-              <li class="know-jee__subject--std"><h2 style="color:#00DDE1">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
-              <li class="know-jee__subject--std"><h2 style="color:#00DDE1">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#00DDE1">58%</h2><p style="margin-top:-10px;">XI Class</p></li>
+              <li class="know-jee__subject-std"><h2 style="color:#00DDE1">42%</h2><p style="margin-top:-10px;">XII Class</p></li>
             </ul>
           </div>
         </div>
@@ -320,68 +320,6 @@
                 <button class="paper__box-button">See more</button>
               </div>
             </div>
-            <!--
-            <div class="paper__box-tab" data-year="2013">
-              <div class="paper__box" style="margin-right:2%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Advanced</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-              <div class="paper__box" style="margin-left:1.5%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Main</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-            </div>
-            <div class="paper__box-tab" data-year="2012">
-              <div class="paper__box" style="margin-right:2%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Advanced</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-              <div class="paper__box" style="margin-left:1.5%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Main</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-            </div>
-            <div class="paper__box-tab" data-year="2011">
-              <div class="paper__box" style="margin-right:2%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Advanced</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-              <div class="paper__box" style="margin-left:1.5%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Main</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-            </div>
-            <div class="paper__box-tab" data-year="2010">
-              <div class="paper__box" style="margin-right:2%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Advanced</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-              <div class="paper__box" style="margin-left:1.5%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Main</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-            </div>
-            <div class="paper__box-tab" data-year="2009">
-              <div class="paper__box" style="margin-right:2%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Advanced</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-              <div class="paper__box" style="margin-left:1.5%;">
-                <p class="paper__box-iit">IIT JEE</p>
-                <h1 class="paper__box-iit-header">Main</h1>
-                <button class="paper__box-button">See more</button>
-              </div>
-            </div>
-            -->
           </div>
         </div>
       </div>
@@ -510,6 +448,7 @@
           </div>
         </div>
       </section>
+      
     <section class="android-app">
       <div class="android-app__container">
         <div class="android-app__mobile">
@@ -531,15 +470,15 @@
     <section class="news">
       <div class="news__container">
         <div class="news__detail">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
-          <p class="news__details--info">
+          <p class="news__details-info">
             Impact od Grading Schemes on Student's Grades.
           </p>
         </div>
         <div class="news__detail" style="margin-left:-5px;">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
           <p class="news__details--info">
@@ -547,10 +486,10 @@
           </p>
         </div>
         <div class="news__detail" style="margin-left:-5px;">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
-          <p class="news__details--info">
+          <p class="news__details-info">
             Impact od Grading Schemes on Student's Grades.
           </p>
         </div>
@@ -561,19 +500,19 @@
         <div class="contact__part">
           <ul class="contact__list">
             <li class="contact__list-header">Prepare</li>
-            <li class="contact__list--page" style="display:inline-block;width:25%;"><a href="IIT_JEE.html" class="contact__list--link">IIT JEE</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:73%;"><a href="#" class="contact__list--link">AIIMS/AIPMT</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:25%;"><a href="#" class="contact__list--link">BITSAT</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:73%;"><a href="#" class="contact__list--link">BANK PO</a></li>
-            <li class="contact__list--page"><a href="#" class="contact__list--link">VIT</a></li>
+            <li class="contact__list-page contact__list-page-one"><a href="IIT_JEE.html" class="contact__list-link">IIT JEE</a></li>
+            <li class="contact__list-page contact__list-page-two"><a href="#" class="contact__list-link">AIIMS/AIPMT</a></li>
+            <li class="contact__list-page contact__list-page-one"><a href="#" class="contact__list-link">BITSAT</a></li>
+            <li class="contact__list-page contact__list-page-two"><a href="#" class="contact__list-link">BANK PO</a></li>
+            <li class="contact__list-page"><a href="#" class="contact__list-link">VIT</a></li>
           </ul>
         </div>
         <div class="contact__part" style="margin-left:-5px">
           <ul class="contact__list">
             <li class="contact__list-header">Company</li>
-            <li class="contact__list--page"><a href="aboutus.html" class="contact__list--link">About Us</a></li>
-            <li class="contact__list--page"><a href="blog.html" class="contact__list--link">Blog</a></li>
-            <li class="contact__list--page"><a href="faq.html" class="contact__list--link">FAQs</a></li>
+            <li class="contact__list-page"><a href="aboutus.html" class="contact__list-link">About Us</a></li>
+            <li class="contact__list-page"><a href="blog.html" class="contact__list-link">Blog</a></li>
+            <li class="contact__list-page"><a href="faq.html" class="contact__list-link">FAQs</a></li>
           </ul>
         </div>
         <div class="contact__part" style="margin-left:-5px">
@@ -581,15 +520,15 @@
             <li class="contact__list-header" style="margin-bottom:9px;">Conatact Info</li>
             <li class="contact__list-contact">
               Mumbai, India<br>
-              <p class="contact__list--subheader">Get directions</p>
+              <p class="contact__list-subheader">Get directions</p>
             </li>            
             <li class="contact__list-contact">
               iwant@embibe.com
-              <p class="contact__list--subheader">Email us</p>
+              <p class="contact__list-subheader">Email us</p>
             </li>
             <li class="contact__list-contact">
               +91-766-695-7555
-              <p class="contact__list--subheader">Say Hi!</p>
+              <p class="contact__list-subheader">Say Hi!</p>
             </li>
           </ul>
         </div>
@@ -598,8 +537,8 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__list"><span style="color: #696969;font-size:12px;">Copyright &copy; 2014 The Indiavidual</sapn></li>
-          <li class="footer__list" id="terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
+          <li class="footer__list"><span class="footer__copyright">Copyright &copy; 2014 The Indiavidual</sapn></li>
+          <li class="footer__list footer__list--terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
           <li class="footer__list"><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
          </ul>
      </div>
