--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
     <script src="js/jquery.collapse.js"></script>
   </head>
   <body>
-    <section class="jumbotron jumbotron__img-error">
+    <section class="jumbotron jumbotron__img--error">
     <header class="header">
       <div class="header__container">
         <a href="index.html" class="navbar__menu--logo">
@@ -31,7 +31,7 @@
         <button class="jumbotron__free-signup jumbotron__home" href="index.html">Home Page</button>
       </div>
     </section>
-    <!-- Sign up button model -->
+    <!-- Sign in button model -->
       <div id="modal" class="popup" style="display:none;">
         <section class="popup__body">
           <h2 class="popup__header">Login to Embibe</h2>
@@ -40,7 +40,7 @@
               <img src="img/facebook.png">
             </div>
             <div class="popup__fb-fb-login">
-              <button class="fb-login">Login with Facebook</button>
+              <button class="popup__fb-login">Login with Facebook</button>
             </div>
           </div>
           <hr width="43%" style="display:inline-block;vertical-align:middle;padding-left:20px;">
@@ -52,7 +52,7 @@
                 <img src="img/email_logo.png">
               </div>
               <div class="popup__form-part-input">
-                <input type = "text" placeholder="Email Address" class="signup_input">
+                <input type = "text" placeholder="Email Address" class="popup__signup_input">
               </div>
             </div>
             <div class="popup__form_part">
@@ -60,11 +60,11 @@
                 <img src="img/password_logo.png">  
               </div>
               <div class="popup__form-part-input">
-                <input type = "password" placeholder="Password" class="signup_input">
+                <input type = "password" placeholder="Password" class="popup__signup_input">
               </div>
             </div>
             <p class="popup__forgetpwd">Forget Password?</p>
-            <button class="fb-login popup--signup">Sign In</button>
+            <button class="popup__fb-login popup--signup">Sign In</button>
           </form>
           <p class="popup__already-member">Not a member yet? <a href="#" style="text-decoration:none;"><span style="color:#00B1EC;">Sign Up for free</span></a></p>
         </section>
@@ -92,15 +92,15 @@
     <section class="news">
       <div class="news__container">
         <div class="news__detail">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
-          <p class="news__details--info">
+          <p class="news__details-info">
             Impact od Grading Schemes on Student's Grades.
           </p>
         </div>
         <div class="news__detail" style="margin-left:-5px;">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
           <p class="news__details--info">
@@ -108,10 +108,10 @@
           </p>
         </div>
         <div class="news__detail" style="margin-left:-5px;">
-          <div class="news__detail--date">
+          <div class="news__detail-date">
             <p>August 11,2014</p>
           </div>
-          <p class="news__details--info">
+          <p class="news__details-info">
             Impact od Grading Schemes on Student's Grades.
           </p>
         </div>
@@ -122,19 +122,19 @@
         <div class="contact__part">
           <ul class="contact__list">
             <li class="contact__list-header">Prepare</li>
-            <li class="contact__list--page" style="display:inline-block;width:25%;"><a href="IIT_JEE.html" class="contact__list--link">IIT JEE</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:73%;"><a href="#" class="contact__list--link">AIIMS/AIPMT</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:25%;"><a href="#" class="contact__list--link">BITSAT</a></li>
-            <li class="contact__list--page" style="display:inline-block;width:73%;"><a href="#" class="contact__list--link">BANK PO</a></li>
-            <li class="contact__list--page"><a href="#" class="contact__list--link">VIT</a></li>
+            <li class="contact__list-page contact__list-page-one"><a href="IIT_JEE.html" class="contact__list-link">IIT JEE</a></li>
+            <li class="contact__list-page contact__list-page-two"><a href="#" class="contact__list-link">AIIMS/AIPMT</a></li>
+            <li class="contact__list-page contact__list-page-one"><a href="#" class="contact__list-link">BITSAT</a></li>
+            <li class="contact__list-page contact__list-page-two"><a href="#" class="contact__list-link">BANK PO</a></li>
+            <li class="contact__list-page"><a href="#" class="contact__list-link">VIT</a></li>
           </ul>
         </div>
         <div class="contact__part" style="margin-left:-5px">
           <ul class="contact__list">
             <li class="contact__list-header">Company</li>
-            <li class="contact__list--page"><a href="aboutus.html" class="contact__list--link">About Us</a></li>
-            <li class="contact__list--page"><a href="blog.html" class="contact__list--link">Blog</a></li>
-            <li class="contact__list--page"><a href="faq.html" class="contact__list--link">FAQs</a></li>
+            <li class="contact__list-page"><a href="aboutus.html" class="contact__list-link">About Us</a></li>
+            <li class="contact__list-page"><a href="blog.html" class="contact__list-link">Blog</a></li>
+            <li class="contact__list-page"><a href="faq.html" class="contact__list-link">FAQs</a></li>
           </ul>
         </div>
         <div class="contact__part" style="margin-left:-5px">
@@ -142,15 +142,15 @@
             <li class="contact__list-header" style="margin-bottom:9px;">Conatact Info</li>
             <li class="contact__list-contact">
               Mumbai, India<br>
-              <p class="contact__list--subheader">Get directions</p>
+              <p class="contact__list-subheader">Get directions</p>
             </li>            
             <li class="contact__list-contact">
               iwant@embibe.com
-              <p class="contact__list--subheader">Email us</p>
+              <p class="contact__list-subheader">Email us</p>
             </li>
             <li class="contact__list-contact">
               +91-766-695-7555
-              <p class="contact__list--subheader">Say Hi!</p>
+              <p class="contact__list-subheader">Say Hi!</p>
             </li>
           </ul>
         </div>
@@ -159,8 +159,8 @@
     <footer class="footer">
       <div class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__list"><span style="color: #696969;font-size:12px;">Copyright &copy; 2014 The Indiavidual</sapn></li>
-          <li class="footer__list" id="terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
+          <li class="footer__list"><span class="footer__copyright">Copyright &copy; 2014 The Indiavidual</sapn></li>
+          <li class="footer__list footer__list--terms"><a href="tos.html" class="footer__link">Terms of Services</a></li>
           <li class="footer__list"><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
          </ul>
      </div>
